--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,8 @@
             <h4>    to full sized web applications</h4>
           </div>
 
-          <div class="slider-element-image slider-element-description" id="symbol-0"></div>
+          <img class="slider-element-svg slider-element-description" src="/images/icon_0_v.svg" alt="icon_0">
+          <!-- <div class="slider-element-image slider-element-description" id="symbol-0"></div> -->
 
         </div>
       </div>
@@ -40,7 +41,8 @@
             <h4>    smartwatches, and PC</h4>
           </div>
 
-          <div class="slider-element-image slider-element-description" id="symbol-1"></div>
+          <img class="slider-element-svg slider-element-description" src="/images/icon_1_v.svg" alt="icon_1">
+          <!-- <div class="slider-element-image slider-element-description" id="symbol-1"></div> -->
 
         </div>
       </div>
@@ -56,7 +58,8 @@
             <h4>Other personal and school works</h4>
           </div>
 
-          <div class="slider-element-image slider-element-description" id="symbol-2"></div>
+          <img class="slider-element-svg slider-element-description" src="/images/icon_2_v.svg" alt="icon_2">
+          <!-- <div class="slider-element-image slider-element-description" id="symbol-2"></div> -->
 
         </div>
       </div>
@@ -71,7 +74,8 @@
             <h4>Learn about how I spend my free time</h4>
           </div>
 
-          <div class="slider-element-image slider-element-description" id="symbol-3"></div>
+          <img class="slider-element-svg slider-element-description" id="symbol-3" src="/images/icon_3_v.svg" alt="icon_3">
+          <!-- <div class="slider-element-image slider-element-description" id="symbol-3"></div> -->
 
         </div>
       </div>
@@ -86,7 +90,8 @@
             <h4>More details about me</h4>
           </div>
 
-          <div class="slider-element-image slider-element-description" id="symbol-4"></div>
+          <img class="slider-element-svg slider-element-description" src="/images/icon_4_v.svg" alt="icon_4">
+          <!-- <div class="slider-element-image slider-element-description" id="symbol-4"></div> -->
 
 
         </div>
@@ -132,7 +137,7 @@
           </div>
           <div class="col-md-8 col-xs-12">
 
-            <h4>Game-A-Thon of Learning</h4>
+            <h4>Game-A-Thon of Learning <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
             <hr class="hr-short hr-border-primary">
             <p>A web application that supplies interactive method of learning through engaging and rewarding gameplay.</p>
             <ul class="desc-list">
@@ -153,7 +158,7 @@
         <!-- element 1-1 -->
         <div class="row right-side">
           <div class="col-md-8 col-xs-12">
-            <h4>GoldenGate Plating</h4>
+            <h4>GoldenGate Plating <span class="title-triangle glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></h4>
             <hr class="hr-short hr-border-primary">
             <p>Personal project to practice front-end development and Bootstrap features</p>
             <ul class="desc-list">
@@ -181,7 +186,7 @@
           </div>
 
           <div class="col-md-8 col-xs-12">
-            <h4>MyWeb</h4>
+            <h4>MyWeb <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
             <hr class="hr-short hr-border-primary">
             <p>Interactive personal homepage. This website :)</p>
             <ul class="desc-list">
@@ -226,7 +231,7 @@
           </div>
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>CRUNCH TIME</h4>
+              <h4>CRUNCH TIME <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>An Android mobile application that quickly converts calories to amount of exercises needed</p>
 
@@ -245,7 +250,7 @@
         <div class="row right-side">
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>BRUSH!</h4>
+              <h4>BRUSH! <span class="title-triangle glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>Smartwatch and smartphone application designed to help and motivate children to brush their teeth</p>
 
@@ -281,7 +286,7 @@
 
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>SimpleTagManager</h4>
+              <h4>SimpleTagManager <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>A program for Windows10 useres that allow users to add tags to any file or folder</p>
 
@@ -330,7 +335,7 @@
 
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>AI Pacman</h4>
+              <h4>AI Pacman <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>An artificial intelligence that search solutions in different multi-agent Pac-man problem variations.</p>
 
@@ -345,7 +350,7 @@
         <div class="row right-side">
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>Crawler</h4>
+              <h4>Crawler <span class="title-triangle glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>An artificial intelligence program that teaches itself how to crawl</p>
               <ul class="desc-list">
@@ -395,7 +400,7 @@
           </div>
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>Blink Dagger from Dota2 for The Elder Scrolls V: Skyrim</h4>
+              <h4>Blink Dagger from Dota2 for The Elder Scrolls V: Skyrim <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>An item from a very popular game called Dota2 remastered in another historic game, Skyrim.</p>
 
@@ -417,7 +422,7 @@
         <div class="row right-side">
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>Divine Rapier from Dota2 for The Elder Scrolls V: Skyrim</h4>
+              <h4>Divine Rapier from Dota2 for The Elder Scrolls V: Skyrim <span class="title-triangle glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
               <p>More from Dota2</p>
 
@@ -447,9 +452,9 @@
 
           <div class="col-md-8 col-xs-12">
             <div>
-              <h4>So Fly</h4>
+              <h4>So Fly <span class="title-triangle glyphicon glyphicon-triangle-top" aria-hidden="true"></span></h4>
               <hr class="hr-short hr-border-primary">
-              <p>A 3D animation starring two frogs and one fly.</p>
+              <p>A 3D animation starring two frogs and one fly. </p>
 
               <ul class="desc-list">
                 <li>Modelled and animated using Maya</li>
