--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -261,7 +261,7 @@
                 <li>Most of the watch application is done by me including front-end displays of the watch, sensor readings, 2D picker, and timer.</li>
               </ul>
 
-              <a class="ext-link ext-link-github" href="https://github.com/cs160-berkeley/Group-21-Project" target="_blank"> <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Go to GitHub</a>
+              <a class="ext-link ext-link-github" href="https://github.com/jlee257/cs160-brush" target="_blank"> <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Go to GitHub</a>
               
               <a class="ext-link ext-link-detail" href="https://docs.google.com/presentation/d/191Q9LwlyAxw0rUyq2JkFZe4GbLVvrXqXEPg4UVpjI0Y/edit?usp=sharing" target="_blank"> <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> View Details</a>
               <a class="ext-link ext-link-youtube" href="https://www.youtube.com/watch?v=Q02tTaZJ7IY" target="_blank"> <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Watch YouTube</a>
